# shop-api-golang/http/dto/user.go
@@ -1,5 +1,7 @@
 package dto
 
+import "time"
+
 type UserResponse struct {
 	ID    int64  `json:"id" example:"1" binding:"required"`
 	Name  string `json:"name" example:"username" binding:"required"`
@@ -11,6 +13,13 @@ type UserWithPurchases struct {
 	Name      string `json:"name" example:"username" binding:"required"`
 	Email     string `json:"email" example:"text@gmail.com" binding:"required"`
 	Purchases int    `json:"purchases" example:"1" binding:"required"`
+}
+
+type UserWithTotalSpent struct {
+	ID         int64   `json:"id" example:"1" binding:"required"`
+	Name       string  `json:"name" example:"username" binding:"required"`
+	Email      string  `json:"email" example:"text@gmail.com" binding:"required"`
+	TotalSpent float64 `json:"totalSpent" example:"123.123" binding:"required"`
 }
 
 type UserByMostExpensiveProduct struct {
@@ -34,7 +43,26 @@ type ListUserWithPurchasesResponse struct {
 	Total int                 `json:"total" binding:"required"`
 }
 
+type ListUserWithTotalResponse struct {
+	Data  []UserWithTotalSpent `json:"data" binding:"required"`
+	Total int                  `json:"total" binding:"required"`
+}
+
 type ListUserByMostExpensiveProductResponse struct {
 	Data  []UserByMostExpensiveProduct `json:"data" binding:"required"`
 	Total int                          `json:"total" binding:"required"`
+}
+
+type CreateUserRequest struct {
+	Name  string `json:"name" binding:"required"`
+	Email string `json:"email" binding:"required"`
+}
+
+type DailyUserRegistrationResponse struct {
+	CreatedAt time.Time `json:"createdAt" binding:"required"`
+	Count     int       `json:"count" binding:"required"`
+}
+
+type ListDailyUserRegistrationResponse struct {
+	Data []DailyUserRegistrationResponse `json:"data" binding:"required"`
 }
