# shop-api-golang/internal/events/models.go
@@ -7,3 +7,8 @@ type OrderCreated struct {
 	UserID    int64     `json:"user_id"`
 	CreatedAt time.Time `json:"created_at"`
 }
+
+type UserCreated struct {
+	UserID    int64     `json:"user_id"`
+	CreatedAt time.Time `json:"created_at"`
+}
